--- a/Surf/package.json
+++ b/Surf/package.json
@@ -12,10 +12,11 @@
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "expo": "~48.0.18",
+    "expo-camera": "~13.2.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.8",
-    "expo-camera": "~13.2.1"
+    "react-native-image-picker": "^5.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
