--- a/Surf/package.json
+++ b/Surf/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/native": "^6.1.7",
     "expo": "~48.0.18",
     "expo-camera": "~13.2.1",
+    "expo-linear-gradient": "^12.3.0",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.8",
