avatar screen done

--- a/Surf/package.json
+++ b/Surf/package.json
@@ -9,15 +9,20 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@mediapipe/face_mesh": "^0.4.1633559619",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
+    "@tensorflow-models/face-detection": "^1.0.2",
+    "@tensorflow-models/face-landmarks-detection": "^1.0.2",
+    "@tensorflow/tfjs": "^4.9.0",
     "expo": "~48.0.18",
     "expo-camera": "~13.2.1",
     "expo-linear-gradient": "^12.3.0",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.8",
-    "react-native-image-picker": "^5.6.0"
+    "react-native-image-picker": "^5.6.0",
+    "react-native-safe-area-context": "^4.7.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
